cover phase 1 end
