# internal/model/school.go
@@ -16,7 +16,7 @@ type School struct {
 	Phone     string       `gorm:"column:tell;size:20" json:"phone,omitempty"`
 	Email     string       `gorm:"size:254" json:"email,omitempty"`
 	Logo      string       `gorm:"size:255" json:"logo,omitempty"`
-	Status    SchoolStatus `gorm:"type:varchar(20);not null;default:active" json:"status"`
+	Status    SchoolStatus `gorm:"type:varchar(20);not null;default:active;check:ck_schools_status,status IN ('active','inactive')" json:"status"`
 	CreatedAt time.Time    `gorm:"not null" json:"created_at"`
 	UpdatedAt time.Time    `gorm:"not null" json:"updated_at"`
 }
